--- a/data.html
+++ b/data.html
@@ -1,60 +1,52 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Charts • US States</title>
   <link rel="stylesheet" href="assets/styles.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body data-page="charts">
-  <nav class="nav">
-    <div class="brand">US States Dashboard</div>
-    <div class="links">
+  <nav>
+    <div class="navbar">
+      <div class="brand">US States Dashboard</div>
       <a href="read.html">Data Table</a>
       <a href="create.html">Create</a>
       <a href="update.html">Update</a>
       <a href="delete.html">Delete</a>
-      <a class="active" href="data.html">Charts</a>
+      <a href="data.html">Charts</a>
       <a href="about.html">About</a>
+      <a class="right btn ghost" href="index.html">Home</a>
     </div>
-    <a class="btn" href="index.html">Home</a>
   </nav>
 
-  <main class="container">
-    <div class="grid grid-3">
-      <section class="panel"><canvas id="popChart" height="240"></canvas></section>
-      <section class="panel"><canvas id="gdpChart" height="240"></canvas></section>
-      <section class="panel"><canvas id="areaChart" height="240"></canvas></section>
-    </div>
-
-    <section class="panel" style="margin-top:20px">
-      <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:8px">
-        <h3 style="margin:0">External Insights</h3>
-        <button id="insight-refresh" class="btn">Refresh</button>
+  <main class="wrapper">
+    <section class="grid">
+      <div class="panel">
+        <div class="card-title">Population Share (Top 6)</div>
+        <div class="chart-wrap"><canvas id="popChart"></canvas></div>
       </div>
-      <div id="insight-loader" class="card-subtle mono">Loading latest USA GDP & Population…</div>
-      <div id="insight-error" class="notice" style="display:none">Couldn't load insights (check network/privacy shields). Showing local data only.</div>
-      <div class="insights">
-        <div class="card-subtle">
-          <div style="color:#9bb3c7;font-size:12px;margin-bottom:6px">USA GDP (current US$)</div>
-          <div id="insight-gdp" class="value" style="font-size:28px">—</div>
-          <div style="color:#9bb3c7;font-size:12px;margin-top:6px">Source: World Bank Open Data</div>
-        </div>
-        <div class="card-subtle">
-          <div style="color:#9bb3c7;font-size:12px;margin-bottom:6px">USA Population</div>
-          <div id="insight-pop" class="value" style="font-size:28px">—</div>
-          <div style="color:#9bb3c7;font-size:12px;margin-top:6px">Source: World Bank Open Data</div>
-        </div>
+      <div class="panel">
+        <div class="card-title">GDP by State (Top 8)</div>
+        <div class="chart-wrap"><canvas id="gdpChart"></canvas></div>
+      </div>
+      <div class="panel">
+        <div class="card-title">Land Area (Top 10)</div>
+        <div class="chart-wrap"><canvas id="areaChart"></canvas></div>
       </div>
     </section>
+
+    <section class="panel" style="margin-top:20px;">
+      <div class="card-title">External Insights</div>
+      <div id="insGdp" class="kpi-value" style="font-size:clamp(1.2rem,3.5vw,2rem);"></div>
+      <div id="insPop" class="kpi-value" style="font-size:clamp(1.2rem,3.5vw,2rem);margin-top:8px;"></div>
+      <button id="btnInsightsRefresh" class="btn btn-xs ghost" style="margin-top:12px;">Refresh</button>
+    </section>
+
+    <div class="footer">© 2025 US States Dashboard</div>
   </main>
 
-  <footer>© 2025 US States Dashboard</footer>
-
-  <script src="assets/model.js"></script>
-  <script src="assets/controller.js"></script>
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <script type="module" src="assets/controller.js"></script>
 </body>
 </html>
