--- a/delete.html
+++ b/delete.html
@@ -1,131 +1,55 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Delete — US States</title>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Delete • US States</title>
   <link rel="stylesheet" href="assets/styles.css"/>
 </head>
-<body>
-<header class="nav">
-  <div><strong>US States Dashboard</strong></div>
-  <nav class="right">
-    <a href="read.html">Data Table</a>
-    <a href="create.html">Create</a>
-    <a href="update.html">Update</a>
-    <a href="delete.html">Delete</a>
-    <a href="data.html">Charts</a>
-    <a class="btn btn-ghost" href="index.html">Back</a>
+<body data-page="delete">
+  <nav>
+    <div class="navbar">
+      <div class="brand">US States Dashboard</div>
+      <a href="read.html">Data Table</a>
+      <a href="create.html">Create</a>
+      <a href="update.html">Update</a>
+      <a href="delete.html">Delete</a>
+      <a href="data.html">Charts</a>
+      <a href="about.html">About</a>
+      <a class="right btn ghost" href="read.html">Back</a>
+    </div>
   </nav>
-</header>
 
-<main class="container">
-  <div class="panel">
-    <h2 style="margin:0 0 6px">Delete a State</h2>
-    <p class="muted" style="margin-top:0">This action cannot be undone.</p>
+  <main class="wrapper">
+    <section class="panel">
+      <div class="card-title">Delete a State</div>
+      <p class="muted">This action cannot be undone.</p>
 
-    <div class="row">
-      <div class="field">
-        <label class="muted">Choose by ID</label>
-        <select id="idSelect"></select>
-      </div>
-      <div class="field">
-        <label class="muted">Or enter ID manually</label>
-        <input id="idInput" placeholder="e.g., CA"/>
-      </div>
-    </div>
+      <form id="deleteForm" class="form">
+        <div class="row">
+          <div>
+            <label class="label">Choose by ID</label>
+            <select id="delChooser" class="input"></select>
+          </div>
+          <div>
+            <label class="label">Or enter ID manually</label>
+            <input id="delManual" class="input" placeholder="e.g., CA" maxlength="2"/>
+          </div>
+        </div>
+        <div class="panel muted" style="margin-top:8px;">You are about to delete: Select a record below.</div>
 
-    <div id="preview" class="card muted" style="margin:12px 0;padding:14px">You are about to delete: Select a record below.</div>
+        <div style="display:flex;gap:10px;margin-top:10px;">
+          <button class="btn danger" type="submit">Delete</button>
+          <a class="btn ghost" href="read.html">Cancel</a>
+        </div>
+      </form>
 
-    <div style="display:flex;gap:10px">
-      <button class="btn btn-danger" id="btnDelete">Delete</button>
-      <a class="btn" href="read.html">Cancel</a>
-    </div>
-  </div>
+      <div class="muted" style="text-align:right;margin-top:8px;">Delete (CRUD D)</div>
+    </section>
 
-  <p class="muted" style="margin-top:12px;text-align:right">Delete (CRUD D)</p>
-</main>
+    <div class="footer">© 2025 US States Dashboard</div>
+  </main>
 
-<footer class="footer">© 2025 US States Dashboard</footer>
-
-<script src="assets/utils.js"></script>
-<script src="assets/model.js"></script>
-<script>
-  const fmt = (n)=>Number(n||0).toLocaleString('en-US');
-
-  // Robustly pick whichever store object your app exposes
-  const Store = (window.StateStore || window.App?.StateStore || window.Model);
-
-  function getAllStates(){
-    if (Store?.getAll) return Store.getAll();
-    // fallback: try common key used earlier
-    const pack = JSON.parse(localStorage.getItem('US_STATES_DB_V3')||'{"states":[]}');
-    return Array.isArray(pack.states) ? pack.states : (Array.isArray(pack) ? pack : []);
-  }
-  function setAllStates(arr){
-    if (Store?.setAll) return Store.setAll(arr);
-    localStorage.setItem('US_STATES_DB_V3', JSON.stringify({states:arr}));
-  }
-
-  const idSel = document.getElementById('idSelect');
-  const idIn  = document.getElementById('idInput');
-  const prev  = document.getElementById('preview');
-
-  let STATES = getAllStates();
-
-  function fillSelect(){
-    idSel.innerHTML = '<option value="">— Select —</option>' +
-      STATES.map(s=>`<option value="${s.id}">${s.id} — ${s.name}</option>`).join('');
-  }
-
-  function findById(id){
-    return STATES.find(s => String(s.id).toUpperCase() === String(id).toUpperCase());
-  }
-
-  function updatePreview(id){
-    const s = findById(id);
-    if(!s){ prev.innerHTML = 'You are about to delete: Select a record below.'; return; }
-    prev.innerHTML = `
-      <strong>${s.name}</strong> (${s.id}) — Capital: ${s.capital || '—'}<br/>
-      Population: ${fmt(s.population)} | GDP: $${fmt(s.gdp)} | Area: ${fmt(s.land_area)} km² | Cities: ${fmt(s.cities)}
-    `;
-  }
-
-  idSel.addEventListener('change', e=>{
-    idIn.value = e.target.value;
-    updatePreview(e.target.value);
-  });
-  idIn.addEventListener('input', e=> updatePreview(e.target.value));
-
-  document.getElementById('btnDelete').addEventListener('click', ()=>{
-    const id = (idIn.value || idSel.value || '').trim();
-    if(!id){ alert('Choose or enter an ID to delete.'); return; }
-    const s = findById(id);
-    if(!s){ alert('ID not found.'); return; }
-    if(!confirm(`Delete ${s.name} (${s.id})? This cannot be undone.`)) return;
-
-    STATES = STATES.filter(x => String(x.id).toUpperCase() !== String(id).toUpperCase());
-    setAllStates(STATES);
-    fillSelect();
-    updatePreview('');
-    alert('Deleted successfully.');
-    // return user to table
-    location.href = 'read.html';
-  });
-
-  // Deep-link support ?id=CA
-  const params = new URLSearchParams(location.search);
-  const preId = params.get('id');
-  fillSelect();
-  if(preId){
-    idSel.value = preId;
-    idIn.value = preId;
-    updatePreview(preId);
-  }
-</script>
-
-<!-- bot -->
-<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <script type="module" src="assets/controller.js"></script>
 </body>
 </html>
