--- a/data.html
+++ b/data.html
@@ -10,7 +10,7 @@
 <body data-page="charts">
   <nav>
     <div class="navbar">
-      <div class="brand">US States Dashboard</div>
+      <a class="brand" href="index.html">US States Dashboard</a>
       <a href="read.html">Data Table</a>
       <a href="create.html">Create</a>
       <a href="update.html">Update</a>
@@ -48,5 +48,11 @@
   </main>
 
   <script type="module" src="assets/controller.js"></script>
+
+   <!-- Botpress v3 Webchat -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
+  <!-- Your hosted config/script (must match your bot) -->
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
+</body>
 </body>
 </html>
