--- a/mybot.html
+++ b/mybot.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
+  <meta charset="utf-8" />
   <title>Bot — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="assets/styles.css" rel="stylesheet" />
+  <style>
+    .bot-card { max-width: 760px; margin: 0 auto; }
+    .fallback { display:none; margin-top:16px; color:#9bb1ce; }
+    .fallback a { color:#52d6c6; }
+  </style>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
+  <nav class="navbar navbar-dark sticky-top">
+    <div class="navbar">
+      <a class="brand" href="index.html">US States Dashboard</a>
     </div>
   </nav>
 
-  <main class="container py-5">
-    <div class="card p-5 text-center">
-      <h4 class="mb-2">Chat with StateBot</h4>
-      <p class="text-muted-2 mb-0">The chat widget appears in the corner on every page.</p>
+  <main class="wrapper">
+    <div class="panel bot-card" style="text-align:center; padding:32px;">
+      <h4 class="mb-2" style="margin:0 0 8px;">Chat with StateBot</h4>
+      <p class="muted" style="margin:0;">The chat widget appears in the corner on every page.</p>
+      <div id="bp-fallback" class="fallback">
+        Couldn’t load the chat widget. Try disabling aggressive privacy shields or open
+        <a href="https://botpress.com/docs/cloud/webchat" target="_blank" rel="noopener">Botpress Webchat Docs</a>.
+      </div>
     </div>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between">
+  <footer class="wrapper">
+    <div class="muted" style="display:flex;justify-content:space-between;gap:12px;">
       <span>© 2025 US States Dashboard</span>
-      <span class="text-muted-2">Botpress embedded</span>
+      <span>Botpress embedded</span>
     </div>
   </footer>
 
-  <!-- Botpress -->
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <!-- Botpress v3 Webchat -->
+  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
+  <!-- Your hosted config/script (must match your bot) -->
+  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
 </body>
 </html>
