--- a/delete.html
+++ b/delete.html
@@ -52,10 +52,7 @@
 
   <script type="module" src="assets/controller.js"></script>
 
-   <!-- Botpress v3 Webchat -->
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
-  <!-- Your hosted config/script (must match your bot) -->
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
-</body>
+<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
 </body>
 </html>
