--- a/mybot.html
+++ b/mybot.html
@@ -6,39 +6,76 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="assets/styles.css" rel="stylesheet" />
   <style>
-    .bot-card { max-width: 760px; margin: 0 auto; }
-    .fallback { display:none; margin-top:16px; color:#9bb1ce; }
-    .fallback a { color:#52d6c6; }
+    body {
+      background-color: #0f1b2a;
+      color: #dbe7ff;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, sans-serif;
+      margin: 0;
+    }
+    .bot-container {
+      max-width: 780px;
+      margin: 60px auto;
+      background-color: #132235;
+      border-radius: 14px;
+      padding: 40px;
+      box-shadow: 0 8px 22px rgba(0, 0, 0, 0.25);
+      text-align: center;
+    }
+    h3 {
+      margin-bottom: 10px;
+    }
+    .muted {
+      color: #9bb1ce;
+    }
+    nav {
+      background-color: rgba(15, 27, 42, 0.75);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+      padding: 12px 20px;
+      position: sticky;
+      top: 0;
+    }
+    .brand {
+      font-weight: 700;
+      color: #dbe7ff;
+      text-decoration: none;
+    }
+    footer {
+      color: #9bb1ce;
+      text-align: center;
+      margin: 40px 0 10px;
+    }
+    .fallback {
+      display: none;
+      margin-top: 20px;
+      color: #9bb1ce;
+    }
+    .fallback a {
+      color: #52d6c6;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
-  <nav class="navbar navbar-dark sticky-top">
-    <div class="navbar">
-      <a class="brand" href="index.html">US States Dashboard</a>
-    </div>
+  <nav>
+    <a class="brand" href="index.html">US States Dashboard</a>
   </nav>
 
-  <main class="wrapper">
-    <div class="panel bot-card" style="text-align:center; padding:32px;">
-      <h4 class="mb-2" style="margin:0 0 8px;">Chat with StateBot</h4>
-      <p class="muted" style="margin:0;">The chat widget appears in the corner on every page.</p>
+  <main>
+    <div class="bot-container">
+      <h3>Chat with StateBot</h3>
+      <p class="muted">Your intelligent assistant for state data and insights.</p>
       <div id="bp-fallback" class="fallback">
-        Couldn’t load the chat widget. Try disabling aggressive privacy shields or open
-        <a href="https://botpress.com/docs/cloud/webchat" target="_blank" rel="noopener">Botpress Webchat Docs</a>.
+        Couldn’t load chat widget. Check your connection or open
+        <a href="https://botpress.com/docs/cloud/webchat" target="_blank">Botpress Docs</a>.
       </div>
     </div>
   </main>
 
-  <footer class="wrapper">
-    <div class="muted" style="display:flex;justify-content:space-between;gap:12px;">
-      <span>© 2025 US States Dashboard</span>
-      <span>Botpress embedded</span>
-    </div>
+  <footer>
+    © 2025 US States Dashboard &nbsp;|&nbsp; Botpress Integrated
   </footer>
 
-  <!-- Botpress v3 Webchat -->
-  <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
-  <!-- Your hosted config/script (must match your bot) -->
-  <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer onerror="document.getElementById('bp-fallback').style.display='block'"></script>
+<script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
+<script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script></body>
 </body>
 </html>
